# simpleImageResizer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD-PARTY-LICENSES.txt  build.bat  build.env.example  build.ps1  build.sh
.github/: FUNDING.yml
.github/workflows/: release.yml
SimpleImageResizer/: CMakeLists.txt  FormatGuideDialog.cpp  FormatGuideDialog.h  ImageProcessor.cpp  ImageProcessor.h  MainWindow.cpp  MainWindow.h  ProcessingJob.h  ProcessingResult.h  SettingsManager.cpp  SettingsManager.h  SimpleImageResizer.cpp  SimpleImageResizer.h
SimpleImageResizer/icons/: app_icon.icns
